<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>4.0.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>io.github.pmeig</groupId>
    <artifactId>spring-libraries</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>spring-libraries</name>
    <description>Spring utility libraries by pmeig</description>
    <url>https://github.com/pmeig/spring-libraries</url>

    <contributors>
        <contributor>
            <name>Pierrick Meignant</name>
            <email>pierrick.workspace@gmail.com</email>
        </contributor>
    </contributors>
    <modules>
        <module>logger</module>
        <module>cache</module>
        <module>security</module>
        <module>swagger</module>
        <module>error</module>
        <module>jpa</module>
    </modules>

    <developers>
        <developer>
            <name>Pierrick Meignant</name>
            <email>pierrick.workspace@gmail.com</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Mozilla Public License 2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/pmeig/spring-libraries.git</connection>
        <developerConnection>scm:git:ssh://github.com/pmeig/spring-libraries.git</developerConnection>
        <url>https://github.com/pmeig/spring-libraries</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>26</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <kotlin.code.style>official</kotlin.code.style>
        <kotlin.compiler.jvmTarget>25</kotlin.compiler.jvmTarget>
        <argLine> </argLine>


        <maven.test-plugin.version>3.5.6</maven.test-plugin.version>
        <maven.source-plugin.version>3.4.0</maven.source-plugin.version>

        <mokito-kotlin.version>6.3.0</mokito-kotlin.version>
        <google-gcp.version>8.0.4</google-gcp.version>

        <pmeig-swagger.version>1.0.0-SNAPSHOT</pmeig-swagger.version>
        <pmeig-logger.version>1.0.0-SNAPSHOT</pmeig-logger.version>
        <pmeig-cache.version>1.0.0-SNAPSHOT</pmeig-cache.version>
        <pmeig-security.version>1.0.0-SNAPSHOT</pmeig-security.version>
        <pmeig-jpa.version>1.0.0-SNAPSHOT</pmeig-jpa.version>
        <pmeig-error.version>1.0.0-SNAPSHOT</pmeig-error.version>

        <kotlin.version>2.3.21</kotlin.version>
        <kotlin.test.skip>false</kotlin.test.skip>
        <kotlin.source.skip>false</kotlin.source.skip>
    </properties>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <kotlin.test.skip>true</kotlin.test.skip>
                <kotlin.source.skip>true</kotlin.source.skip>
            </properties>
        </profile>
        <profile>
            <id>release</id>
            <properties>
                <kotlin.test.skip>true</kotlin.test.skip>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <kotlin.source.skip>true</kotlin.source.skip>
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>spring-cloud-gcp-dependencies</artifactId>
                <version>${google-gcp.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
        <finalName>${project.artifactId}</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.test-plugin.version}</version>
                    <configuration>
                        <skipTests>${kotlin.test.skip}</skipTests>
                        <!--suppress UnresolvedMavenProperty -->
                        <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar} -XX:+EnableDynamicAgentLoading</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <skipTests>${kotlin.test.skip}</skipTests>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <version>${kotlin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-allopen</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <args>
                            <arg>-Xjsr305=strict</arg>
                            <arg>-Xannotation-default-target=param-property</arg>
                        </args>
                        <compilerPlugins>
                            <plugin>spring</plugin>
                        </compilerPlugins>
                    </configuration>
                    <executions>
                        <execution>
                            <id>compile</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <phase>test-compile</phase>
                            <goals>
                                <goal>test-compile</goal>
                            </goals>
                            <configuration>
                                <skip>${kotlin.test.skip}</skip>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source-plugin.version}</version>
                    <configuration>
                        <skipSource>${kotlin.source.skip}</skipSource>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>io.github.pmeig</groupId>
                <artifactId>spring-additional-metadata-plugin</artifactId>
                <version>1.0.0</version>
                <executions>
                    <execution>
                        <id>scan-metadata</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>additional-metadata</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>

        <dependency>
            <groupId>org.mockito.kotlin</groupId>
            <artifactId>mockito-kotlin</artifactId>
            <version>${mokito-kotlin.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlinx</groupId>
            <artifactId>kotlinx-coroutines-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

</project>